--- a/project_name/core/templates/base.html
+++ b/project_name/core/templates/base.html
@@ -1,23 +1,35 @@
-{% load staticfiles %}
+{% load static %}
 
 <!DOCTYPE html>
 
 <html class="no-js" lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Cosmun Boilerplate</title>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8">
+  <title>Django Setup</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <meta name="twitter:card" content=""/>
+  <meta name="twitter:site" content=""/>
+  <meta name="twitter:title" content=""/>
+  <meta name="twitter:description" content="" />
+  <meta property="twitter:image" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:type" content="" />
+  <meta property="og:title" content="" />
+  <meta property="og:site_name" content="" />
+  <meta property="og:description" content="" />
+  <meta property="og:image" content="" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
 </head>
 <body>
